--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.10.1
 async-generator==1.10
 attrs==22.2.0
 certifi==2022.12.7
@@ -16,12 +17,15 @@ outcome==1.2.0
 PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
 selenium==4.8.2
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 trio==0.22.0
 trio-websocket==0.10.0
+tzdata==2022.7
+tzlocal==4.3
 urllib3==1.26.15
 Werkzeug==2.2.3
 wsproto==1.2.0
