--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ APScheduler==3.10.1
 async-generator==1.10
 attrs==22.2.0
 certifi==2022.12.7
+charset-normalizer==3.4.0
 click==8.1.3
 exceptiongroup==1.1.1
 Flask==2.2.5
@@ -14,10 +15,13 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 outcome==1.2.0
+packaging==24.2
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
+requests==2.32.3
 selenium==4.8.2
 six==1.16.0
 sniffio==1.3.0
@@ -27,6 +31,7 @@ trio-websocket==0.10.0
 tzdata==2022.7
 tzlocal==4.3
 urllib3==1.26.15
+webdriver-manager==4.0.2
 Werkzeug==2.2.3
 wsproto==1.2.0
 zipp==3.15.0
